# anthere

./: .gitignore  Cargo.toml  README.md  diesel.toml
docker/: Dockerfile  compose.yaml
migrations/2024-05-13-051045_create_users/: up.sql
src/: auth.rs  config.rs  csrf.rs  errors.rs  lib.rs  main.rs  routes.rs  schema.rs  store.rs
src/app/: mod.rs  public.rs
src/app/api/: mod.rs
src/db/: mod.rs  test_db.rs
src/db/migrations/2024-05-13-051045_create_users/: up.sql
src/db/migrations/2024-05-21-053555_create_sessions/: up.sql
src/db/seeds/: mod.rs  users.rs
src/models/: mod.rs  session.rs  user.rs
src/server/: mod.rs
